Quick fix to navbar logo. Till it gets changed to smth omre readable, let's use this, to follow our upstream style.

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -70,10 +70,6 @@
     #navbar {
       a#navbar-logo {
         img {
-          #codeberg-logo(@accent);
-        }
-
-        &:hover img {
           #codeberg-logo(@base);
         }
       }
